started cleaning swagger requests
